--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
       </head>
       <body>
         <div>
-          <h1>404 - Not Found</h1>
-          <p>Resource unavailable.</p>
+          <h1>🛑 Dừng lại 🛑</h1>
+          <p>Bạn đang truy cập trái phép!</p>
+          <p>F5 trang web để tiếp tục sử dụng</p>
         </div>
       </body>
       </html>
